Ejercicio2-Guia3 Javascript

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>Guia 3 Javascript</title>
 </head>
 <body>
-    <h2>1.En una granja se requiere saber alguna información para determinar el precio de venta por cada kilo de huevo.
-        precio se determina a traves del promedio de calidad de las N gallinas que hay en la granja. 
-        La calidad de cada gallina se obtiene según la formula:
-        calidad = (peso de la gallina * altura de la gallina)/Numero de huevos que pone</h2>
+    <h2> 2. Hacer un algoritmo que al ingresar 2 números por la pantalla y se calcule la suma, resta, multiplicación y división. 
+        El proceso debe terminar cuando se hallan realizado 10 procesos (Hacer uso de contadores).</h2>
     <script src="main.js"></script>
 </body>
 </html>
