--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Guia 3 Javascript</title>
 </head>
 <body>
-    <h2> 2. Hacer un algoritmo que al ingresar 2 números por la pantalla y se calcule la suma, resta, multiplicación y división. 
-        El proceso debe terminar cuando se hallan realizado 10 procesos (Hacer uso de contadores).</h2>
+    <h2> 3 .Programa para solicitar el nombre, apellido, edad y la nota promedio de 5 estudiantes de un curso de computación. .</h2>
     <script src="main.js"></script>
 </body>
 </html>
