--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Guia 3 Javascript</title>
 </head>
 <body>
-    <h2> 3 .Programa para solicitar el nombre, apellido, edad y la nota promedio de 5 estudiantes de un curso de computación. .</h2>
+    <h2> >4-  42 personas toman parte de un baile. Durante la fiesta una dama bailó con 7 caballeros, una segunda dama con 8, una tercera con 9, y así sucesivamente hasta que la última bailó con todos los hombres.
+        Cuantas damas había en el baile?. </h2>
     <script src="main.js"></script>
 </body>
 </html>
