--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Guia 3 Javascript</title>
 </head>
 <body>
-    <h2> >4-  42 personas toman parte de un baile. Durante la fiesta una dama bailó con 7 caballeros, una segunda dama con 8, una tercera con 9, y así sucesivamente hasta que la última bailó con todos los hombres.
-        Cuantas damas había en el baile?. </h2>
+    <h2> 5. El profesor de una materia desea conocer la cantidad de sus alumnos que no tienen derecho al examen  de nivelación.
+        Diseñe un pseudocódigo que lea las calificaciones obtenidas en las 5 unidades
+        por cada  uno de los 40 alumnos y escriba la cantidad de ellos que no tienen derecho al examen de nivelación </h2>
     <script src="main.js"></script>
 </body>
 </html>
