Ejercicio7-Guia3 Javascript

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Guia 3 Javascript</title>
 </head>
 <body>
-    <h2>6 Un avión que viaja 800 Km/hr. Dispara un proyectil auto impulsado, en el momento del disparo, el  avión hace un giro de 90 grados y acelera a 20 mtrs/seg2. El proyectil sigue su curso, acelerando a 10  mtrs./seg2. Diseñe un pseudocódigo que escriba cada segundo, la distancia que separa al avión del  proyectil, hasta que estén a 10,000 mtrs, o más    
+    <h2>6 Un avión que viaja 800 Km/hr. Dispara un proyectil auto impulsado, en el momento del disparo, el  avión hace un giro de 90 grados y acelera a 20 mtrs/seg2. El proyectil sigue su curso, acelerando a 10  mtrs./seg2. Diseñe un pseudocódigo que escriba cada segundo, la distancia que separa al avión del  proyectil, hasta que estén a 10,000 mtrs,7.Una compañía de seguros tiene contratados a n vendedores. Cada uno hace tres ventas a la semana.
+        Su política de pagos es que un vendedor recibe un sueldo base, y un 10% extra por comisiones de
+        sus ventas. El gerente de su compañía desea saber cuanto dinero obtendrá en la semana cada
+        vendedor por concepto de comisiones por las tres ventas realizadas, y cuanto tomando en cuenta su
+        sueldo base y sus comisiones o más.    
     </h2>
     <script src="main.js"></script>
-</body>
-</h2>
-    <script src="main.js"></script>
+
 </body>
 </html>
