--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Guia 3 Javascript</title>
 </head>
 <body>
-    <h2>8 Diseñar un pseudocódigo que calcule el promedio ponderado para alumno del ITT. El cálculo se hace  de la siguiente forma: 
-        Se multiplica cada calificación por los créditos de cada materia 
-        El resultado anterior se suma con los resultados de todas las materias, por separado se suman los  créditos de cada materia y finalmente se divide la suma de todas las materias por sus respectivos  créditos, entre la suma de todos los créditos. (materias: Fundamentos, BD y ética).
-    <script src="main.js"></script>
+    <h2>9. Diseñe un algoritmo que determine el resultado de la elección del representante estudiantil de la
+        universidad X, para ello se presentó tres candidatos A, B, y C.
+        Para ganar la elección se debe obtener como mínimo el 51%.
+        En caso de que no haya un ganador se repite la elección en una segunda vuelta.
+        Van a la segunda vuelta los dos candidatos que obtuvieron la más alta votación.
+        Se anula la elección en caso de que se produzca un empate doble por el segundo lugar o un empate triple</h2>
 
 </body>
 </html>
