Ejercicio10-Guia3 Javascript

--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
     <title>Guia 3 Javascript</title>
 </head>
 <body>
-    <h2>9. Diseñe un algoritmo que determine el resultado de la elección del representante estudiantil de la
-        universidad X, para ello se presentó tres candidatos A, B, y C.
-        Para ganar la elección se debe obtener como mínimo el 51%.
-        En caso de que no haya un ganador se repite la elección en una segunda vuelta.
-        Van a la segunda vuelta los dos candidatos que obtuvieron la más alta votación.
-        Se anula la elección en caso de que se produzca un empate doble por el segundo lugar o un empate triple</h2>
+    <h2>10 durante un cierto tiempo los vehículos que pasan por dicha calle.
+    Ahora calcularemos un algoritmo  se está realizando un estudio del tráfico en una de las calles de su ciudad
+    </h2>
 
 </body>
 </html>
