Ejercico11-Guia3 Javascript

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Guia 3 Javascript</title>
 </head>
 <body>
-    <h2>10 durante un cierto tiempo los vehículos que pasan por dicha calle.
-    Ahora calcularemos un algoritmo  se está realizando un estudio del tráfico en una de las calles de su ciudad
+    <h2>11   El Departamento de Seguridad Pública y Transito de desea saber de los n autos que entran a la ciudad de
+        Bogotá.
     </h2>
 
 </body>
